FIx z-index issue

--- a/src/sass/views/dashboard.scss
+++ b/src/sass/views/dashboard.scss
@@ -12,7 +12,7 @@ $side-secondary-width: 260px;
     }
 
     .side-primary {
-        z-index: 10;
+        z-index: 110;
 
         position: relative;
         width: $side-primary-width;
@@ -68,7 +68,7 @@ $side-secondary-width: 260px;
     }
 
     .side-secondary {
-        z-index: 5;
+        z-index: 100;
 
         position: relative;
         width: $side-secondary-width;
